--- a/topnav/about/about.html
+++ b/topnav/about/about.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="index.html">Головна</a>
+        <a class="active" href="../../index.html">Головна</a>
         <a href="about.html">Про мене</a>
         <a href="../pwork/pwork.html">Практичні роботи</a>
         <a href="../lwork/lwork.html">Лабораторні заняття</a>
