--- a/topnav/lwork/lwork.html
+++ b/topnav/lwork/lwork.html
@@ -11,6 +11,18 @@
         <a href="../pwork/pwork.html">Практичні роботи</a>
         <a href="lwork.html">Лабораторні заняття</a>
       </div>
+      <ul>
+        <li>
+            <h1>Лабораторна робота №1</h1>
+            <a href="lw1/lw1.html">Посилання на завдання</a>
+            <iframe
+            src="lw1/lab_1.pdf"
+            width="100%"
+            height="500"
+            >
+        </iframe>
+        </li>
+      </ul>
 </body>
 <footer>
     <p>Контакти:
@@ -19,6 +31,6 @@
     </p>
     <p><a href="mailto:rudykartem44@gmail.com">rudykartem44@gmail.com</a></p>
     <p><a href="https://www.instagram.com/zx_tychka_f9_c/">Instagram</a></p>
-    <p><a href="https://github.com/KnightElmojr/Web">Github</a></p>
+    <p><a href="https://github.com/KnightElmojr/KnightElmojr.github.io.git">Github</a></p>
   </footer>
 </html>
