--- a/topnav/pwork/pwork.html
+++ b/topnav/pwork/pwork.html
@@ -31,6 +31,6 @@
     </p>
     <p><a href="mailto:rudykartem44@gmail.com">rudykartem44@gmail.com</a></p>
     <p><a href="https://www.instagram.com/zx_tychka_f9_c/">Instagram</a></p>
-    <p><a href="https://github.com/KnightElmojr/Web">Github</a></p>
+    <p><a href="https://github.com/KnightElmojr/KnightElmojr.github.io.git">Github</a></p>
   </footer>
 </html>
