--- a/topnav/pwork/pc1/rozklad.html
+++ b/topnav/pwork/pc1/rozklad.html
@@ -519,6 +519,6 @@ WEB тех.-2016<strong>[Пз]</strong><br>
     </p>
     <p><a href="mailto:rudykartem44@gmail.com">rudykartem44@gmail.com</a></p>
     <p><a href="https://www.instagram.com/zx_tychka_f9_c/">Instagram</a></p>
-    <p><a href="https://github.com/KnightElmojr/Web">Github</a></p>
+    <p><a href="https://github.com/KnightElmojr/KnightElmojr.github.io.git">Github</a></p>
   </footer>
 </html>
