--- a/topnav/lwork/lw1/lw1.html
+++ b/topnav/lwork/lw1/lw1.html
@@ -11,7 +11,7 @@
         <a href="../../pwork/pwork.html">Практичні роботи</a>
         <a href="../lwork.html">Лабораторні заняття</a>
       </div>
-      <div>
+      <div class="form">
         <form action="https://webhook.site/2ff51ecb-cb28-4104-a454-4a1d2a44ff2c">
             <label for="Fname">Ім'я користувача</label>
             <input type="text" name="Ім'я користувача" required>
