--- a/topnav/pwork/pwork.html
+++ b/topnav/pwork/pwork.html
@@ -22,6 +22,16 @@
             >
         </iframe>
         </li>
+        <li>
+          <h1>Практична робота №2</h1>
+          <a href="../lwork/lw1/lw1.html">Посилання на завдання</a>
+          <iframe
+          src="pc2/practice_2.pdf"
+          width="100%"
+          height="500"
+          >
+      </iframe>
+      </li>
       </ul>
 </body>
 <footer>
