--- a/topnav/lwork/lwork.html
+++ b/topnav/lwork/lwork.html
@@ -22,6 +22,16 @@
             >
         </iframe>
         </li>
+        <li>
+          <h1>Лабораторна робота №2</h1>
+          <a href="lw2/lab2.html">Посилання на завдання</a>
+          <iframe
+          src="lw2/lab2.pdf"
+          width="100%"
+          height="500"
+          >
+      </iframe>
+      </li>
       </ul>
 </body>
 <footer>
