--- a/topnav/lwork/lwork.html
+++ b/topnav/lwork/lwork.html
@@ -32,6 +32,16 @@
           >
       </iframe>
       </li>
+      <li>
+        <h1>Лабораторна робота №3</h1>
+        <a href="lw3/lab3.html">Посилання на завдання</a>
+        <iframe
+        src="lw3/lab3.pdf"
+        width="100%"
+        height="500"
+        >
+    </iframe>
+    </li>
       </ul>
 </body>
 <footer>
