--- a/topnav/lwork/lwork.html
+++ b/topnav/lwork/lwork.html
@@ -42,6 +42,16 @@
         >
     </iframe>
     </li>
+    <li>
+      <h1>Лабораторна робота №4</h1>
+      <a href="lw4/lab4.html">Посилання на завдання</a>
+      <iframe
+      src="lw4/lab4.pdf"
+      width="100%"
+      height="500"
+      >
+  </iframe>
+  </li>
       </ul>
 </body>
 <footer>
