--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
 <title>Особистий веб-сайт Рудика Артема</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;900&display=swap"
+    />
 </head>
 <body>
     <div class="topnav">
@@ -11,14 +18,108 @@
         <a href="topnav/pwork/pwork.html">Практичні роботи</a>
         <a href="topnav/lwork/lwork.html">Лабораторні заняття</a>
       </div>
-</body>
-<footer>
-    <p>Контакти:
-        <br>
-        +380995293702   
-    </p>
-    <p><a href="mailto:rudykartem44@gmail.com">rudykartem44@gmail.com</a></p>
-    <p><a href="https://www.instagram.com/zx_tychka_f9_c/">Instagram</a></p>
-    <p><a href="https://github.com/KnightElmojr/KnightElmojr.github.io.git">Github</a></p>
-  </footer>
+      <div class="home" id="homeContainer">
+        <div class="home-child"></div>
+        <div class="home-item"></div>
+        <b class="hi-i-am-container">
+          <p class="hi-i-am">Hi, I am Artem,</p>
+          <p class="hi-i-am">QA Engineer</p>
+        </b>
+        <div class="amet-minim-mollit">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </div>
+        <a class="download-resume" href="public/actual CV.pdf" download="CV.pdf">Download Resume</a>
+        <img class="home-inner" alt="" src="./public/ellipse-1@2x.jpg" />
+  
+        <div class="rectangle-div"></div>
+        <div class="home-child1"></div>
+        <div class="home-child2"></div>
+        <b class="making-a-design">Лабораторна робота №5</b>
+        <b class="creating-pixel-perfect"
+          >Лабораторна робота №4</b
+        >
+        <div class="design-pattern">Web, HTML, CSS</div>
+        <div class="figma-icon-design">Web, HTML, CSS</div>
+        <img class="vector-icon" alt="" src="./public/vector-1.svg" />
+  
+        <img class="home-child3" alt="" src="./public/vector-1.svg" />
+  
+        <div class="feb-2020">15 Nov 2023</div>
+        <div class="feb-20201">01 Nov 2023</div>
+        <div class="amet-minim-mollit1">
+          Допрацювати головну сторінку сайту відповідно до шаблону. Якщо не хочете змінювати головну сторінку, 
+можете створити нову та розмістити її в перелік своїх лабораторних робіт.
+        </div>
+        <div class="amet-minim-mollit2">
+          Використовуючи шаблон розробити сторінку планера.
+        </div>
+        <div class="recent-posts">Recent works</div>
+        <a class="view-all" href="topnav/lwork/lwork.html">View all</a>
+        <div class="featured-works">Also can be interesting for you</div>
+        <div class="footer">
+          <div class="footer-child"></div>
+          <a class="fb-icon" href="" ><img alt="" src="./public/fb.svg"/></a>
+  
+          <a class="linkedin-icon" href=""><img alt="" src="./public/linkedin.svg"/></a>
+  
+          <a class="group-icon" href=""><img alt="" src="./public/group.svg"/></a>
+  
+          <a class="insta-icon" href="https://www.instagram.com/zx_tychka_f9_c/"><img alt="" src="./public/insta.svg"></a>
+  
+          <div class="copyright-2020-all">
+            Copyright ©2023  All rights reserved
+          </div>
+        </div>
+        <a class="designing-dashboards" href=" https://maks245.github.io/web_technologys/">Palamarchuk Maksym</a>
+        <a class="vibrant-portraits-of" href="https://oneclassick15.github.io/webtech_tcr/">Belyaev Danylo</a>
+        <a class="days-of-malayalam" href="https://feshchenko1.github.io/WEB/index.html">Feschenko Bogdan</a>
+        <div class="dashboard">QA Engineer</div>
+        <div class="illustration">Front-end Developer</div>
+        <div class="typography">Front-end Developer</div>
+        <div class="amet-minim-mollit3">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </div>
+        <div class="amet-minim-mollit4">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </div>
+        <div class="amet-minim-mollit5">
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </div>
+        <div class="home-child4"></div>
+        <div class="home-child5"></div>
+        <div class="home-child6"></div>
+        <div class="div">2023</div>
+        <div class="div1">2023</div>
+        <div class="div2">2023</div>
+        <img class="home-child7" alt="" src="./public/vector-8.svg"  />
+  
+        <img class="home-child8" alt="" src="./public/vector-8.svg" />
+  
+        <img class="home-child9" alt="" src="./public/vector-8.svg" />
+  
+        <img class="rectangle-icon" alt="" src="./public/Max.jpg" />
+  
+        <img class="home-child10" alt="" src="./public/noPhoto.jpg" />
+  
+        <img class="home-child11" alt="" src="./public/noPhoto.jpg" />
+      </div>
+  
+      <script>
+        var homeContainer = document.getElementById("homeContainer");
+        if (homeContainer) {
+          homeContainer.addEventListener("click", function (e) {
+            // Please sync "Blog" to the project
+          });
+        }
+        </script>
+    </body>
+
 </html>
