--- a/topnav/lwork/lwork.html
+++ b/topnav/lwork/lwork.html
@@ -52,6 +52,26 @@
       >
   </iframe>
   </li>
+  <li>
+    <h1>Лабораторна робота №5</h1>
+    <a href="../../index.html">Посилання на завдання</a>
+    <iframe
+    src="lw5/lab5.pdf"
+    width="100%"
+    height="500"
+    >
+</iframe>
+</li>
+<li>
+  <h1>Лабораторна робота №6</h1>
+  <a href="lw6/lab6.html">Посилання на завдання</a>
+  <iframe
+  src="lw6/lab6.pdf"
+  width="100%"
+  height="500"
+  >
+</iframe>
+</li>
       </ul>
 </body>
 <footer>
