--- a/topnav/lwork/lwork.html
+++ b/topnav/lwork/lwork.html
@@ -72,6 +72,16 @@
   >
 </iframe>
 </li>
+<li>
+  <h1>Лабораторна робота №7</h1>
+  <a href="lw7/lab7.html">Посилання на завдання</a>
+  <iframe
+  src="lw7/lab7.pdf"
+  width="100%"
+  height="500"
+  >
+</iframe>
+</li>
       </ul>
 </body>
 <footer>
